--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <link rel="stylesheet" href="../bootstrap.css">
       <!-- loads google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700&display=swap" rel="stylesheet">
+      <title>Jordan+Mathew</title>
+      <meta name="description" content="Wedding website for Jordan Cusumano and Mathew Freeman. September 5, 2020. Dexter, Michigan">
    </head>
    
    <body>      
