--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
       <!-- page body text -->
       <main role="main" class="flex-shrink-0">
          <div class="container mt-5 mb-5"  style="padding-top:0px">
-            
-            <!-- image on card with shadow -->
             <div class="text-center">
                <h1 class="display-3" style="font-family: merriwether">Jordan+Mathew</h1>
                <br>
+            </div>
+            <!-- image on card with shadow -->
+            <div class="text-center">
                <figure class="mw-100">
                   <img src="Sunflower.png" class="figure-img img-fluid rounded" alt="Jordan+Mathew 2020">
                </figure>
+            </div>
+            <div class="text-center">
                <h3 class="display-4" style="font-weight: 200">September 5, 2020</h3>
                <h4 style="font-weight: 100">MORE DETAILS COMING SOON</h4>
             </div>
