--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main role="main" class="flex-shrink-0">
          <div class="container mt-5 mb-5"  style="padding-top:0px">
             <div class="text-center">
-               <h1 class="display-3" style="font-family: merriwether">Jordan+Mathew</h1>
+               <h1 style="font-size: 4.5rem; font-family: merriwether">Jordan+Mathew</h1>
                <br>
             </div>
             <!-- image on card with shadow -->
@@ -28,7 +28,7 @@
                </figure>
             </div>
             <div class="text-center">
-               <h3 class="display-4" style="font-weight: 200">September 5, 2020</h3>
+               <h3 style="font-size: 3.5rem; font-weight: 200">September 5, 2020</h3>
                <h4 style="font-weight: 100">MORE DETAILS COMING SOON</h4>
             </div>
          </div>
