--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- css stylesheet -->
-      <link rel="stylesheet" href="../bootstrap.css">
+      <link rel="stylesheet" href="bootstrap.css">
       <!-- loads google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700&display=swap" rel="stylesheet">
       <title>Jordan+Mathew</title>
