--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- css stylesheet -->
-      <link rel="stylesheet" href="bootstrap.css">
+      <link rel="stylesheet" href="../bootstrap.css">
       <!-- loads google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather:400,700&display=swap" rel="stylesheet">
       <title>Jordan+Mathew</title>
@@ -18,7 +18,7 @@
       <main role="main" class="flex-shrink-0">
          <div class="container mt-5 mb-5"  style="padding-top:-10px">
             <div class="text-center">
-               <h5 style="font-family: merriwether">Jordan+Mathew</h1>
+               <h1 style="font-family: merriwether;font-size: 4.5rem">Jordan+Mathew</h1>
             </div>
             <!-- image on card with shadow -->
             <div class="text-center">
@@ -27,7 +27,7 @@
                </figure>
             </div>
             <div class="text-center">
-               <h6 style="font-weight: 200">September 5, 2020</h3>
+               <h3 style="font-weight: 200;font-size: 3.5rem">September 5, 2020</h3>
                <h4 style="font-weight: 100">MORE DETAILS COMING SOON</h4>
             </div>
          </div>
