--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="text-center">
                <h3 style="font-weight: 200;font-size: 6vw">September 5, 2020</h3>
-               <h4 style="font-weight: 100">MORE DETAILS COMING SOON</h4>
+               <h4 style="font-weight: 100;font-size: 4vw">MORE DETAILS COMING SOON</h4>
             </div>
          </div>
       </main>
