--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main role="main" class="flex-shrink-0">
          <div class="container mt-5 mb-5"  style="padding-top:-50px">
             <div class="text-center">
-               <h1 style="font-family: merriwether;font-size: 8vw">Jordan+Mathew</h1>
+               <h1 style="font-family: merriwether;font-size: 8vw;padding-top: -50px">Jordan+Mathew</h1>
             </div>
             <!-- image on card with shadow -->
             <div class="text-center">
@@ -28,7 +28,7 @@
             </div>
             <div class="text-center">
                <h3 style="font-weight: 200;font-size: 6vw">September 5, 2020</h3>
-               <h4 style="font-weight: 100;font-size: 4vw">MORE DETAILS COMING SOON</h4>
+               <h4 style="font-weight: 100;font-size: 2vw">MORE DETAILS COMING SOON</h4>
             </div>
          </div>
       </main>
