--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main role="main" class="flex-shrink-0">
          <div class="container mt-5 mb-5"  style="margin-top: -50px">
             <div class="text-center">
-               <h1 style="font-family: merriwether;font-size: 8vw">Jordan+Mathew</h1>
+               <h1 style="font-family: merriwether;font-size: 8vw; margin-top: -50px">Jordan+Mathew</h1>
             </div>
             <!-- image on card with shadow -->
             <div class="text-center">
