--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <meta name="description" content="Wedding website for Jordan Cusumano and Mathew Freeman. September 5, 2020. Dexter, Michigan">
    </head>
    
-   <body>      
+   <body style="padding-top: 0px;margin-top: 0px">      
       <!-- page body text -->
       <main role="main" class="flex-shrink-0">
-         <div class="container mt-5 mb-5"  style="margin-top: -50px">
+         <div class="container mt-5 mb-5"  style="padding-top: 0px">
             <div class="text-center">
-               <h1 style="font-family: merriwether;font-size: 8vw; margin-top: -50px">Jordan+Mathew</h1>
+               <h1 style="font-family: merriwether;font-size: 8vw">Jordan+Mathew</h1>
             </div>
             <!-- image on card with shadow -->
             <div class="text-center">
