--- a/index.html
+++ b/index.html
@@ -11,62 +11,6 @@
    
 <! Web Page>
 <body class="has-navbar-fixed-top">
-
-<! Navigation Menu>
-   <!--
-   <nav class="navbar is-fixed-top is-link" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-         <a class="navbar-item" href="index.html">
-            <p><strong>Jordan+Mathew</strong></p>
-         </a>
-         <a role="button" class="navbar-burger burger" onclick="document.querySelector('.navbar-menu').classList.toggle('is-active');">
-            <span></span>
-            <span></span>
-            <span></span>
-         </a>
-      </div>
-      <div id="navbarBasicExample" class="navbar-menu">
-         <div class="navbar-start">
-            <a class="navbar-item"  href="pages/about.html">
-               About
-            </a>
-            <div class="navbar-item has-dropdown is-hoverable">
-               <a class="navbar-link">
-                  Equine-Assisted Therapy
-               </a>
-               <div class="navbar-dropdown">
-                  <a class="navbar-item" href="pages/therapy.html">
-                     Equine-Assisted Therapy
-                  </a>
-                  <a class="navbar-item"  href="pages/horses.html">
-                     Why horses?
-                  </a>
-                  <a class="navbar-item"  href="pages/packages.html">
-                     Packages and Pricing
-                  </a>
-               </div>
-            </div>
-            <a class="navbar-item " href="pages/contact.html">
-               Get In Touch
-            </a>
-            <a class="navbar-item" href="pages/supervision.html">
-               Licensed Supervision
-            </a>
-            <a class="navbar-item" href="pages/events.html">
-               Upcoming Events
-            </a>
-         </div>
-         <div class="navbar-end">
-            <a class="navbar-item" href="https://www.facebook.com/pages/category/Medical---Health/Jordan-Cusumano-LMSW-LLC-105880287474729/" target="_blank">
-               <img src="images/facebook.png" alt="facebook" width="24" height="24">
-            </a>
-            <a class="navbar-item" href="https://www.instagram.com/jordan_cusumano_lmsw_llc" target="_blank">
-               <img src="images/instagram.png" alt="instagram" width="24" height="24">
-            </a> 
-         </div>
-      </div>
-   </nav>
-   -->
    
 <! Page Content>
    <section class="section">
@@ -90,7 +34,7 @@
             <br>
             <div class="columns">
                <div class="column is-8 is-vcentered is-centered is-offset-2">
-                  <p>We hope everyone has stayed healthy over the past few months. We never could have imagines we'd be planning a wedding in the middle of a global pandemic, but here we are! As we make adjustments and prepare for our special day we appreciate the love and and support of our families and friends.</p>
+                  <p>We hope everyone has stayed healthy over the past few months. We never could have imagined we'd be planning a wedding in the middle of a global pandemic, but here we are! As we make adjustments and prepare for our special day we appreciate the love and and support of our families and friends.</p>
                   <p>Below you will find our gift registries. Amid all of the wedding planning we are also starting the process of buying our first home! Any monetary gifts will be used towards the many expenses that come along with this big step we are taking and will be greatly appreciated.</p>
                </div> 
             </div>
@@ -146,29 +90,5 @@
          <p>Howell, Michigan</p>
       </div>
    </footer>
-
-<!--
-<! Responsive Navigation Menu Script>
-   <script>
-      document.addEventListener('DOMContentLoaded', () => {
-         // Get all "navbar-burger" elements
-         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-         // Check if there are any navbar burgers
-         if ($navbarBurgers.length > 0) {
-            // Add a click event on each of them
-            $navbarBurgers.forEach( el => {
-               el.addEventListener('click', () => {
-                  // Get the target from the "data-target" attribute
-                  const target = el.dataset.target;
-                  const $target = document.getElementById(target);
-                  // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-                  el.classList.toggle('is-active');
-                  $target.classList.toggle('is-active');
-               });
-            });
-         }
-      });
-   </script>
--->
 </body>
 </html>
