--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <div class="columns">
                <div class="column is-8 is-vcentered is-centered is-offset-2">
-                  <p>We hope everyone has stayed healthy over the past few months. We never could have imagined we'd be planning a wedding in the middle of a global pandemic, but here we are! As we make adjustments and prepare for our special day we appreciate the love and and support of our families and friends.</p>
+                  <p>We hope everyone has stayed healthy over the past few months. We never could have imagined we'd be planning a wedding in the middle of a global pandemic, but here we are! As we make adjustments and prepare for our special day we appreciate the love and support of our families and friends.</p>
                   <p>Below you will find our gift registries. Amid all of the wedding planning we are also starting the process of buying our first home! Any monetary gifts will be used towards the many expenses that come along with this big step we are taking and will be greatly appreciated.</p>
                </div> 
             </div>
