--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
    <section class="section">
       <div class="container">
          <h1 class="title">
-            <p class="title is-size-1 is-size-2-mobile has-text-centered has-text-weight-bold" style="margin-top: -50px;">Jordan+Mathew</p>
-            <p class="subtitle is-4 has-text-centered has-text-weight-light is-uppercase">September 5, 2020</p>
+            <p class="title is-size-1 is-size-3-mobile has-text-centered has-text-weight-bold" style="margin-top: -50px;">Jordan+Mathew</p>
+            <p class="subtitle is-size-4 is-size-5-mobile has-text-centered has-text-weight-light is-uppercase">September 5, 2020</p>
          </h1>
          <br>
          <br>
