--- a/index.html
+++ b/index.html
@@ -5,68 +5,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="robots" content="noindex">
    <link rel="icon" type="image/png" href="images/heart.png">   
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+   <link rel="stylesheet" href="optimized.css">
    <title>Jordan+Mathew</title>
 </head>
    
 <! Web Page>
 <body class="has-navbar-fixed-top">
-
-<! Navigation Menu>
-   <!--
-   <nav class="navbar is-fixed-top is-link" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-         <a class="navbar-item" href="index.html">
-            <p><strong>Jordan+Mathew</strong></p>
-         </a>
-         <a role="button" class="navbar-burger burger" onclick="document.querySelector('.navbar-menu').classList.toggle('is-active');">
-            <span></span>
-            <span></span>
-            <span></span>
-         </a>
-      </div>
-      <div id="navbarBasicExample" class="navbar-menu">
-         <div class="navbar-start">
-            <a class="navbar-item"  href="pages/about.html">
-               About
-            </a>
-            <div class="navbar-item has-dropdown is-hoverable">
-               <a class="navbar-link">
-                  Equine-Assisted Therapy
-               </a>
-               <div class="navbar-dropdown">
-                  <a class="navbar-item" href="pages/therapy.html">
-                     Equine-Assisted Therapy
-                  </a>
-                  <a class="navbar-item"  href="pages/horses.html">
-                     Why horses?
-                  </a>
-                  <a class="navbar-item"  href="pages/packages.html">
-                     Packages and Pricing
-                  </a>
-               </div>
-            </div>
-            <a class="navbar-item " href="pages/contact.html">
-               Get In Touch
-            </a>
-            <a class="navbar-item" href="pages/supervision.html">
-               Licensed Supervision
-            </a>
-            <a class="navbar-item" href="pages/events.html">
-               Upcoming Events
-            </a>
-         </div>
-         <div class="navbar-end">
-            <a class="navbar-item" href="https://www.facebook.com/pages/category/Medical---Health/Jordan-Cusumano-LMSW-LLC-105880287474729/" target="_blank">
-               <img src="images/facebook.png" alt="facebook" width="24" height="24">
-            </a>
-            <a class="navbar-item" href="https://www.instagram.com/jordan_cusumano_lmsw_llc" target="_blank">
-               <img src="images/instagram.png" alt="instagram" width="24" height="24">
-            </a> 
-         </div>
-      </div>
-   </nav>
-   -->
    
 <! Page Content>
    <section class="section">
@@ -146,29 +90,5 @@
          <p>Howell, Michigan</p>
       </div>
    </footer>
-
-<!--
-<! Responsive Navigation Menu Script>
-   <script>
-      document.addEventListener('DOMContentLoaded', () => {
-         // Get all "navbar-burger" elements
-         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-         // Check if there are any navbar burgers
-         if ($navbarBurgers.length > 0) {
-            // Add a click event on each of them
-            $navbarBurgers.forEach( el => {
-               el.addEventListener('click', () => {
-                  // Get the target from the "data-target" attribute
-                  const target = el.dataset.target;
-                  const $target = document.getElementById(target);
-                  // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-                  el.classList.toggle('is-active');
-                  $target.classList.toggle('is-active');
-               });
-            });
-         }
-      });
-   </script>
--->
 </body>
 </html>
