--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <article class="media">
                            <div class="media-content">
                               <a href="https://forms.gle/Wp6L2Suab3sGgNGX6" target="_blank">
-                                 <img src="images/RSVP.jpg" alt="RSVP">
+                                 <img src="images/rsvp.jpg" alt="RSVP">
                               </a>
                            </div>
                         </article>
