--- a/index.html
+++ b/index.html
@@ -69,20 +69,24 @@
             </div>
          </div>
          <div class="columns">
-            <div class="column is-4 is-vcentered is-centered is-offset-4">
+            <div class="column is- is-vcentered is-centered">
                <div class="columns  is-flex is-vcentered is-centered"> 
+                  <div class="column">
+                  </div>
                   <div class="column">
                      <div class="" style="max-width: 650px">
                         <article class="media">
                            <div class="media-content">
-                              <a href="https://forms.gle/Wp6L2Suab3sGgNGX6" target="_blank">
-                                 <img src="images/rsvp.jpg" alt="RSVP">
-                              </a>
+                              <a href="https://www.bedbathandbeyond.com/store/giftregistry/viewregistryguest/549096143" target="_blank">
+                                 <img src="images/rsvp.jpg" alt="Bed Bath & Beyond Registry">
+                              </a>   
                            </div>
                         </article>
                      </div>
                   </div>
-               </div>
+                  <div class="column">
+                  </div>
+               </div>                  
             </div>
          </div>
          <br>
