--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                      <div class="" style="max-width: 650px">
                         <article class="media">
                            <div class="media-content">
-                              <a href="https://www.bedbathandbeyond.com/store/giftregistry/viewregistryguest/549096143" target="_blank">
-                                 <img src="images/rsvp.jpg" alt="Bed Bath & Beyond Registry">
+                              <a href="https://forms.gle/Wp6L2Suab3sGgNGX6" target="_blank">
+                                 <img src="images/rsvp.jpg" alt="RSVP">
                               </a>   
                            </div>
                         </article>
