Update home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             <br>
             <div class="columns">
                <div class="column is-8 is-vcentered is-centered is-offset-2">
-                  <p>We hope everyone has stayed healthy over the past few months. We never could have imagined we'd be planning a wedding in the middle of a global pandemic, but here we are! As we make adjustments and prepare for our special day we appreciate the love and and support of our families and friends.</p>
+                  <p>Wow! We are so excited that we are officially in the home stretch! We appreciate everyone's positive energy and well wishes. A few things we'd like to remind and bring everyone's attention to:
+                     <ul>
+                        <li>COVID-19 continues to be a concern. We want to remind everyone to be in good spirits and to be willing to wear masks, and practice social distancing and good hand hygiene throughout the duration of the wedding. We are asking everyone to play it abundantly safe for the evening to ensure the safety of all of us.</li>
+                        <li>The wedding will be on as planned rain or shine!</li>
+                        <li>Normal, formal wedding attire is expected.</li>
+                     </ul>
+                  </p>
                   <p>Below you will find our gift registries. Amid all of the wedding planning we are also starting the process of buying our first home! Any monetary gifts will be used towards the many expenses that come along with this big step we are taking and will be greatly appreciated.</p>
                </div> 
             </div>
@@ -65,30 +71,21 @@
                         </article>
                      </div>
                   </div>
-               </div>                  
-            </div>
-         </div>
-         <div class="columns">
-            <div class="column is- is-vcentered is-centered">
-               <div class="columns  is-flex is-vcentered is-centered"> 
-                  <div class="column">
-                  </div>
                   <div class="column">
                      <div class="" style="max-width: 650px">
                         <article class="media">
                            <div class="media-content">
-                              <a href="https://forms.gle/Wp6L2Suab3sGgNGX6" target="_blank">
-                                 <img src="images/rsvp.jpg" alt="RSVP">
+                              <a href="https://www.myregistry.com/rei/wedding-registry/mathew-freeman-and-jordan-cusumano-howell-mi/2475817" target="_blank">
+                                 <img src="images/rei.jpg" alt="REI Registry">
                               </a>   
                            </div>
                         </article>
                      </div>
                   </div>
-                  <div class="column">
-                  </div>
                </div>                  
             </div>
          </div>
+         
          <br>
       </div>
    </section>
