--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
          <br>
          <div class="columns">
             <div class="column is-8 is-vcentered is-centered is-offset-2">
-               <div class="columns  is-flex is-vcentered is-centered"> 
+               <div class="columns"> 
+                  <div class="column">
+                     <div class="" style="max-width: 650px">
+                        <article class="media">
+                           <div class="media-content">
+                              <a href="https://www.myregistry.com/rei/wedding-registry/mathew-freeman-and-jordan-cusumano-howell-mi/2475817" target="_blank">
+                                 <img src="images/rei.jpg" alt="REI Registry">
+                              </a>   
+                           </div>
+                        </article>
+                     </div>
+                  </div>
                   <div class="column">
                      <div class="" style="max-width: 650px">
                         <article class="media">
@@ -71,21 +82,9 @@
                         </article>
                      </div>
                   </div>
-                  <div class="column">
-                     <div class="" style="max-width: 650px">
-                        <article class="media">
-                           <div class="media-content">
-                              <a href="https://www.myregistry.com/rei/wedding-registry/mathew-freeman-and-jordan-cusumano-howell-mi/2475817" target="_blank">
-                                 <img src="images/rei.jpg" alt="REI Registry">
-                              </a>   
-                           </div>
-                        </article>
-                     </div>
-                  </div>
                </div>                  
             </div>
          </div>
-         
          <br>
       </div>
    </section>
