--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
    <section class="section">
       <div class="container">
          <h1 class="title">
-            <p class="title is-size-1 is-size-2-mobile has-text-centered has-text-weight-bold" style="margin-top: -50px;">Jordan+Mathew</p>
-            <p class="subtitle is-4 has-text-centered has-text-weight-light is-uppercase">September 5, 2020</p>
+            <div class="columns is-flex is-vcentered is-centered">
+               <img src="images/jordanandmathewheader.png" alt="Image">
+            </div>
          </h1>
          <br>
          <br>
@@ -26,66 +27,13 @@
                <div class="box" style="max-width: 650px">
                   <article class="media">
                      <div class="media-content">
-                        <img src="images/jordanandmathew.jpg" alt="Image">
+                        <img src="images/jordanandmathewwedding.jpg" alt="Image">
                      </div>
                   </article>
                </div>
             </div>
             <br>
-            <div class="columns">
-               <div class="column is-8 is-vcentered is-centered is-offset-2">
-                  <p>Wow! We are so excited that we are officially in the home stretch! We appreciate everyone's positive energy and well wishes. A few things we'd like to remind and bring everyone's attention to:
-                     <ul>
-                        <li>COVID-19 continues to be a concern. We want to remind everyone to be in good spirits and to be willing to wear masks, and practice social distancing and good hand hygiene throughout the duration of the wedding. We are asking everyone to play it abundantly safe for the evening to ensure the safety of all of us.</li>
-                        <li>The wedding will be on as planned rain or shine!</li>
-                        <li>Normal, formal wedding attire is expected.</li>
-                     </ul>
-                  </p>
-                  <p>Below you will find our gift registries. Amid all of the wedding planning we are also starting the process of buying our first home! Any monetary gifts will be used towards the many expenses that come along with this big step we are taking and will be greatly appreciated.</p>
-               </div> 
-            </div>
-         </div>         
-         <br>
-         <div class="columns">
-            <div class="column is-8 is-vcentered is-centered is-offset-2">
-               <div class="columns"> 
-                  <div class="column">
-                     <div class="" style="max-width: 650px">
-                        <article class="media">
-                           <div class="media-content">
-                              <a href="https://www.myregistry.com/rei/wedding-registry/mathew-freeman-and-jordan-cusumano-howell-mi/2475817" target="_blank">
-                                 <img src="images/rei.jpg" alt="REI Registry">
-                              </a>   
-                           </div>
-                        </article>
-                     </div>
-                  </div>
-                  <div class="column">
-                     <div class="" style="max-width: 650px">
-                        <article class="media">
-                           <div class="media-content">
-                              <a href="https://www.target.com/gift-registry/giftgiver?registryId=ecd3a1889fdd45e7829730c7cfe1b2e8&type=WEDDING" target="_blank">
-                                 <img src="images/target.jpg" alt="Target Registry">
-                              </a>
-                           </div>
-                        </article>
-                     </div>
-                  </div>
-                  <div class="column">
-                     <div class="" style="max-width: 650px">
-                        <article class="media">
-                           <div class="media-content">
-                              <a href="https://www.bedbathandbeyond.com/store/giftregistry/viewregistryguest/549096143" target="_blank">
-                                 <img src="images/bedbathandbeyond.jpg" alt="Bed Bath & Beyond Registry">
-                              </a>   
-                           </div>
-                        </article>
-                     </div>
-                  </div>
-               </div>                  
-            </div>
-         </div>
-         <br>
+         </div>     
       </div>
    </section>
 
